welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:3: error: reassignment to val
		speed = speed + 5
                      ^caughtSpeeding:11: error: type mismatch;
 found   : Unit
 required: Int
	else if ( 81 <= speed && !isBirthday ) {
             ^